Utilizando decorators e importando no tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES2022",
         "outDir": "./dist/js/",
         "noEmitOnError": true,
-
+        "experimentalDecorators": true
     },
     "include": [
         "./src/**/*"
